--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -59,10 +59,14 @@ form{
         color: #4d9900;
     }
 }
-@media only screen and (max-width: 450px) {
+@media  only screen and  (max-width: 450px) {
     form{
         min-width: 100vw;
         max-width: auto;
+        margin-left: 2px;
+        margin-right: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
     }
     .output {
         min-width: 100vw;
@@ -71,12 +75,23 @@ form{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-left: 2px;
+        margin-right: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+        img{
+            width: 280px;
+        }
     }   
 }
-@media only screen and (min-width:451) and (max-width: 1000px) {
+@media  only screen and  (min-width:451) and (max-width: 1400px) {
     form{
         min-width: 100vw;
         max-width: auto;
+        margin-left: 1px;
+        margin-right: 1px;
+        padding-left: 1px;
+        padding-right: 1px;
     }
     .output {
         min-width: 100vw;
@@ -85,5 +100,9 @@ form{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-left: 1px;
+        margin-right: 1px;
+        padding-left: 1px;
+        padding-right: 1px;
     }    
 }
