--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -5,4 +5,9 @@ body {
     background-size: cover;
     background-position: center;
 }
+@media only screen and (min-width: 451px) and (max-width: 1400px) {
+    body{
+        height: 100vh;
+    }
 
+}
